# ros_whisper_pkg

./: README.md
ros_whisper/: CMakeLists.txt  package.xml
ros_whisper/launch/: whisper_server.launch.py
ros_whisper/ros_whisper/: ros_whisper_node.py
whisper_client_cpp/: CMakeLists.txt  package.xml
whisper_client_cpp/include/whisper_client_cpp/: visibility_control.h  whisper_client_node.hpp
whisper_client_cpp/launch/: whisper_client.launch.py
whisper_client_cpp/src/: whisper_client_node.cpp
whisper_interfaces/: CMakeLists.txt  package.xml
whisper_interfaces/action/: WhisperResponse.action
whisper_interfaces/srv/: WhisperResponse.srv
