<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_whisper</name>
  <version>0.0.1</version>
  <description>ros2 package for offline transcription</description>
  <maintainer email="xuzheyuan961124@gmail.com">Charles Xu</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>numpy</depend>
  <depend>std_msgs</depend>
  <depend>openai</depend>
  <depend>torch</depend>
  <depend>whisper</depend>
  <depend>pyaudio</depend>
  <depend>wave</depend>
  <depend>pydub</depend>
  <depend>threading</depend>
  <exec_depend>whisper_interfaces</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>