<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>whisper_interfaces</name>
  <version>0.0.1</version>
  <description>Whisper service call interfaces.</description>

  <maintainer email="xuzheyuan961124@gmail.com">charles xu</maintainer>
  <license>Apache License 2.0</license>
  <author email="xuzheyuan961124@gmail.com">Dirk Thomas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
